add further navigation bar improvement suggestions

--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.scss
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.scss
@@ -37,3 +37,17 @@
 .active {
     background-color: #276091;
 }
+.exerciseIndex {
+    color: #6c757d;
+    align-content: center;
+    font-size: 18px;
+    font-weight: bold;
+    margin-left: 20px;
+}
+.timer {
+    color: #212529;
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-right: 5px;
+}
