--- a/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
@@ -36,6 +36,11 @@
     </div>
 
     <div class="mb-3">
+        <h5><span jhiTranslate="artemisApp.studentExamDetail.workingTime">Working time</span></h5>
+        {{ workingTime() }}
+    </div>
+
+    <div class="mb-3">
         <h5><span jhiTranslate="artemisApp.studentExamDetail.exercises">Exercises</span></h5>
         <div>
             <table class="table table-striped">
