--- a/src/main/webapp/app/exam/manage/exam-management.component.html
+++ b/src/main/webapp/app/exam/manage/exam-management.component.html
@@ -66,10 +66,10 @@
                     <td>{{ exam.numberOfRegisteredUsers }}</td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
-                            <div class="btn-group-vertical mr-1 mb-1">
+                            <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']">
                                 <button
                                     type="submit"
-                                    *ngIf="course.isAtLeastInstructor"
+                                    *ngIf="isAtLeastInstructor"
                                     [routerLink]="['/course-management', course.id, 'exams', exam.id, 'scores']"
                                     class="btn btn-info btn-sm mr-1 mb-1"
                                 >
