Expression has changed after it was checked, should be fixed for timer use observabale which emits time every 500ms (if changed) instead of checking every angular draw cycle

--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
@@ -50,7 +50,7 @@
                 </ng-template>
             </div>
             <div class="col-auto h5 m-0 text-overflow px-3 py-2 remaining-time" [class.critical]="criticalTime">
-                {{ remainingTime }}
+                {{ displayTime$ | async }}
             </div>
         </div>
     </div>
