--- a/src/main/webapp/app/exam/manage/exam-management.component.html
+++ b/src/main/webapp/app/exam/manage/exam-management.component.html
@@ -65,6 +65,19 @@
                     <td>{{ exam.startDate | durationTo: exam.endDate }}</td>
                     <td>{{ exam.numberOfRegisteredUsers }}</td>
                     <td class="text-right">
+                        <div class="btn-group-vertical mr-1 mb-1">
+                            <button
+                                *ngIf="isAtLeastInstructor"
+                                type="submit"
+                                [routerLink]="[exam.id, 'tutor-exam-dashboard']"
+                                class="btn btn-primary btn-sm mr-1 mb-1 exercise-button"
+                                id="exercises-button-{{ exam.id }}"
+                            >
+                                <fa-icon [icon]="'th-list'"></fa-icon>
+                                <span class="d-none d-md-inline">{{ 'artemisApp.examManagement.tutorDashboard' | translate }}</span>
+                            </button>
+                        </div>
+
                         <div class="btn-group flex-btn-group-container">
                             <div class="btn-group-vertical mr-1 mb-1">
                                 <button
