wiring of disconnected property

--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -40,6 +40,7 @@
                         [exercise]="activeExercise"
                         [studentParticipation]="activeExercise.studentParticipations[0]"
                         [courseId]="courseId"
+                        [disconnected]="disconnected"
                     ></jhi-programming-submission-exam>
                 </ng-container>
             </ng-container>
