--- a/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
+++ b/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h2 style="text-align: center;">
-        <span>{{ 'artemisApp.examParticipation.greeting' | translate: { title: exam.title, username: accountName } }}</span>
+        <span>{{ 'artemisApp.examParticipation.greeting' | translate: { title: exam.title, fullName: accountName } }}</span>
     </h2>
     <div><span style="display: table; margin-left: auto; margin-right: auto;" [innerHTML]="formattedGeneralInformation"></span></div>
     <div style="text-align: center;">
