changed input update

--- a/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
+++ b/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
@@ -16,7 +16,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="form-group">
-                    <input type="text" class="form-control" name="fullname" id="fullname" placeholder="Name" [(ngModel)]="enteredName" [ngModelOptions]="{ updateOn: 'blur' }" />
+                    <input type="text" class="form-control" name="fullname" id="fullname" placeholder="Name" [(ngModel)]="enteredName" [ngModelOptions]="{ updateOn: 'change' }" />
                 </div>
             </div>
             <div class="row justify-content-center">
