Allow for line wrap

--- a/src/main/webapp/app/exercises/text/assess-new/textblock-assessment-card/textblock-assessment-card.component.scss
+++ b/src/main/webapp/app/exercises/text/assess-new/textblock-assessment-card/textblock-assessment-card.component.scss
@@ -1,7 +1,7 @@
 @import 'src/main/webapp/content/scss/artemis-variables';
 
 span {
-    white-space: pre;
+    white-space: pre-wrap;
 
     &:hover {
         background: $gray-300;
