--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
@@ -46,7 +46,7 @@
                 </button>
                 <ng-template #notAProgrammingExercise>
                     <button class="btn btn-sm btn-primary px-3" (click)="submitExam()">
-                        {{ 'artemisApp.examParticipation.submitOtherExercise' | translate }}
+                        {{ 'artemisApp.examParticipation.' + (exerciseIndex >= exercises.length - 1 ? 'submitLastExercise' : 'submitOtherExercise') | translate }}
                     </button>
                 </ng-template>
             </div>
