--- a/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
+++ b/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
@@ -16,7 +16,16 @@
             </div>
             <div class="row justify-content-center">
                 <div class="form-group">
-                    <input type="text" class="form-control" name="fullname" id="fullname" placeholder="Name" [(ngModel)]="enteredName" [ngModelOptions]="{ updateOn: 'change' }" />
+                    <input
+                        type="text"
+                        class="form-control"
+                        name="fullname"
+                        id="fullname"
+                        placeholder="Name"
+                        [(ngModel)]="enteredName"
+                        [ngModelOptions]="{ updateOn: 'change' }"
+                        [disabled]="waitingForExamStart"
+                    />
                 </div>
             </div>
             <div class="row justify-content-center">
