--- a/src/main/webapp/app/exam/participate/summary/exercises/programming-exam-summary/programming-exam-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exercises/programming-exam-summary/programming-exam-summary.component.html
@@ -1,10 +1,3 @@
 <div class="d-flex align-items-center mb-1 mt-1">
-    <a
-        class="ml-2"
-        href="{{ this.participation?.repositoryUrl }}"
-        target="_blank"
-        rel="noopener noreferrer"
-        jhiTranslate="artemisApp.tutorExerciseDashboard.programmingExercise.goToRepo"
-        >Go to repository</a
-    >
+    <a class="ml-2" href="{{ this.participation?.repositoryUrl }}" target="_blank" rel="noopener noreferrer">{{ this.participation?.repositoryUrl }}</a>
 </div>
