change exercise index in navigation bar

--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
@@ -27,7 +27,7 @@
                     <button class="btn w-100" [ngClass]="setExerciseButtonStatus(i)" (click)="changeExercise(i)">
                         <fa-icon [icon]="icon"></fa-icon>
                     </button>
-                    <p class="exerciseIndex">{{ i }}</p>
+                    <p class="exerciseIndex">{{ i + 1 }}</p>
                 </div>
             </ng-container>
             <div class="navigation-item">
