fix navigation bar for exercises without participation generate participation for exercise if it does not exist if error on generating participation -> show retry button

--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -46,6 +46,22 @@
                     </ng-container>
                 </ng-container>
             </ng-container>
+            <ng-container *ngIf="(generateParticipationStatus | async) === 'generating'">
+                <div class="d-flex justify-content-center align-items-center">
+                    <p class="mb-0" jhiTranslate="artemisApp.examParticipation.preparingParticipation"></p>
+                    <div class="spinner-border ml-2" role="status">
+                        <span class="sr-only">Loading...</span>
+                    </div>
+                </div>
+            </ng-container>
+            <ng-container *ngIf="(generateParticipationStatus | async) === 'failed'">
+                <div class="d-flex justify-content-center align-items-center">
+                    <p class="mb-0" jhiTranslate="artemisApp.examParticipation.generateParticipationFailed"></p>
+                    <button class="btn btn-sm btn-primary px-3 ml-2" (click)="createParticipationForExercise(this.activeExercise).subscribe()">
+                        {{ 'artemisApp.examParticipation.generateParticipationRetry' | translate }}
+                    </button>
+                </div>
+            </ng-container>
             <!-- exam connection status footer bar -->
             <div *ngIf="!disconnected" class="exam-footer connected">
                 <div class="container">
