--- a/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
+++ b/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
@@ -1,190 +1,15 @@
-<div *ngIf="exam">
-    <h2>
-        <span>{{ exam.title }}</span>
-        <small jhiTranslate="artemisApp.examScores.resultCount" [translateValues]="{ resultsLength: filteredResultsSize }">results</small>
-    </h2>
-    <jhi-alert></jhi-alert>
-    <div class="mb-2 clearfix">
-        <div class="exercise-scores-filter-toolbar d-flex align-content-center my-2">
-            <div class="d-flex align-items-center">
-                <label class="radio-inline mb-0 d-flex align-items-center">
-                    <input type="radio" [ngModel]="resultCriteria.filterProp" (click)="updateResultFilter(FilterProp.ALL)" [value]="FilterProp.ALL" />
-                    <span class="ml-1">{{ 'artemisApp.examScores.showAll' | translate }}</span>
-                </label>
-                <label class="radio-inline ml-2 mb-0 d-flex align-items-center">
-                    <input type="radio" [ngModel]="resultCriteria.filterProp" (click)="updateResultFilter(FilterProp.UNSUCCESSFUL)" [value]="FilterProp.UNSUCCESSFUL" />
-                    <span class="ml-1">{{ 'artemisApp.examScores.showUnsuccessful' | translate }}</span>
-                </label>
-                <label class="radio-inline ml-2 mb-0 d-flex align-items-center">
-                    <input type="radio" [ngModel]="resultCriteria.filterProp" (click)="updateResultFilter(FilterProp.SUCCESSFUL)" [value]="FilterProp.SUCCESSFUL" />
-                    <span class="ml-1">{{ 'artemisApp.examScores.showSuccessful' | translate }}</span>
-                </label>
-            </div>
-        </div>
-        <div class="d-flex justify-content-end">
-            <div class="button-toolbar">
-                <!-- <button type="submit" routerLink="/course-management/{{ course.id }}/exercises/{{ exercise.id }}/participations" class="btn btn-primary btn-sm mr-1">
-                    <fa-icon [icon]="'list-alt'"></fa-icon>
-                    <span class="d-none d-md-inline" jhiTranslate="artemisApp.exercise.participations">Participations</span>
-                </button> -->
-                <button class="btn btn-info btn-sm mr-1" (click)="exportNames()">
-                    <fa-icon [icon]="'download'"></fa-icon>
-                    <span class="d-none d-md-inline" jhiTranslate="artemisApp.examScores.exportNames">Export Names</span>
-                </button>
-                <button class="btn btn-info btn-sm mr-1" (click)="exportResults()">
-                    <fa-icon [icon]="'download'"></fa-icon>
-                    <span class="d-none d-md-inline" jhiTranslate="artemisApp.examScores.exportResults">Export Results</span>
-                </button>
-                <button class="btn btn-primary btn-sm" (click)="refresh()">
-                    <fa-icon [icon]="'sync'"></fa-icon>
-                    <span class="d-none d-md-inline" jhiTranslate="artemisApp.examScores.refresh">Refresh</span>
-                </button>
-            </div>
-        </div>
-    </div>
-    <jhi-data-table
-        [isLoading]="isLoading"
-        entityType="result"
-        [allEntities]="results"
-        entitiesPerPageTranslation="artemisApp.exercise.resultsPerPage"
-        showAllEntitiesTranslation="artemisApp.exercise.showAllResults"
-        [searchFields]="['participation.student.login', 'participation.student.name']"
-        [searchPlaceholderTranslation]="'artemisApp.examScores.searchForStudents'"
-        [searchTextFromEntity]="searchTextFromResult"
-        [searchResultFormatter]="searchResultFormatter"
-        [customFilterKey]="resultCriteria.filterProp"
-        [customFilter]="filterResultByProp"
-        (entitiesSizeChange)="handleResultsSizeChange($event)"
-    >
-        <ng-template let-settings="settings" let-controls="controls">
-            <ngx-datatable
-                class="bootstrap"
-                [limit]="settings.limit"
-                [sortType]="settings.sortType"
-                [columnMode]="settings.columnMode"
-                [headerHeight]="settings.headerHeight"
-                [footerHeight]="settings.footerHeight"
-                [rowHeight]="settings.rowHeight"
-                [rows]="settings.rows"
-                [rowClass]="settings.rowClass"
-                [scrollbarH]="settings.scrollbarH"
-            >
-                <ngx-datatable-column prop="" [minWidth]="50" [width]="60">
-                    <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex">
-                        {{ rowIndex + 1 }}
-                    </ng-template>
-                </ngx-datatable-column>
-
-                <!-- TODO participation ersetzen durch was immer wir dann nehmen -->
-                <ngx-datatable-column prop="participation" [resizeable]="false" [sortable]="true" [minWidth]="100" [width]="180">
-                    <ng-template ngx-datatable-header-template>
-                        <span class="datatable-header-cell-wrapper" (click)="controls.onSort('participation.student.name')">
-                            <span class="datatable-header-cell-label bold sortable">{{ 'artemisApp.examScores.name' | translate }}</span>
-                            <fa-icon [icon]="controls.iconForSortPropField('participation.student.name')"></fa-icon>
-                        </span>
-                    </ng-template>
-
-                    <ng-template ngx-datatable-cell-template let-value="value">
-                        <span *ngIf="exam.course.isAtLeastInstructor">
-                            <a routerLink="../participations/{{ value.id }}/submissions">
-                                {{ value.student?.name }}
-                            </a>
-                        </span>
-                        <span *ngIf="!exam.course.isAtLeastInstructor">
-                            {{ value.student?.name }}
-                        </span>
-                    </ng-template>
-                </ngx-datatable-column>
-
-                <ngx-datatable-column prop="participation" [resizeable]="false" [sortable]="true" [minWidth]="100" [width]="110">
-                    <ng-template ngx-datatable-header-template>
-                        <span class="datatable-header-cell-wrapper" (click)="controls.onSort('participation.student.login')">
-                            <span class="datatable-header-cell-label bold sortable">{{ 'artemisApp.examScores.login' | translate }}</span>
-                            <fa-icon [icon]="controls.iconForSortPropField('participation.student.login')"></fa-icon>
-                        </span>
-                    </ng-template>
-                    <ng-template ngx-datatable-cell-template let-value="value">
-                        <a [routerLink]="['/admin', 'user-management', value.student.login, 'view']">
-                            {{ value.student.login }}
-                        </a>
-                    </ng-template>
-                </ngx-datatable-column>
-
-                <ngx-datatable-column prop="completionDate" [resizeable]="false" [sortable]="true" [minWidth]="130" [width]="150">
-                    <ng-template ngx-datatable-header-template>
-                        <span class="datatable-header-cell-wrapper" (click)="controls.onSort('completionDate')">
-                            <span class="datatable-header-cell-label bold sortable">{{ 'artemisApp.examScores.completionDate' | translate }}</span>
-                            <fa-icon [icon]="controls.iconForSortPropField('completionDate')"></fa-icon>
-                        </span>
-                    </ng-template>
-                    <ng-template ngx-datatable-cell-template let-value="value">
-                        {{ value | artemisDate }}
-                    </ng-template>
-                </ngx-datatable-column>
-
-                <ngx-datatable-column prop="" [resizeable]="false" [sortable]="true" [minWidth]="200" [width]="300">
-                    <ng-template ngx-datatable-header-template>
-                        <span class="datatable-header-cell-wrapper" (click)="controls.onSort('score')">
-                            <span class="datatable-header-cell-label bold">{{ 'artemisApp.examScores.result' | translate }}</span>
-                            <fa-icon [icon]="controls.iconForSortPropField('score')"></fa-icon>
-                        </span>
-                    </ng-template>
-                    <ng-template ngx-datatable-cell-template let-value="value">
-                        <jhi-result [result]="value" [showTestNames]="true" [participation]="value.participation"></jhi-result>
-                    </ng-template>
-                </ngx-datatable-column>
-
-                <!-- <ngx-datatable-column prop="assessmentType" *ngIf="newManualResultAllowed" [resizeable]="false" [sortable]="true" [minWidth]="100" [width]="100">
-                    <ng-template ngx-datatable-header-template>
-                        <span class="datatable-header-cell-wrapper" (click)="controls.onSort('type')">
-                            <span class="datatable-header-cell-label bold">{{ 'artemisApp.exercise.type' | translate }}</span>
-                            <fa-icon [icon]="controls.iconForSortPropField('type')"></fa-icon>
-                        </span>
-                    </ng-template>
-                    <ng-template ngx-datatable-cell-template let-value="value">
-                        {{ value }}
-                    </ng-template>
-                </ngx-datatable-column> -->
-
-                <ngx-datatable-column prop="participation" [resizeable]="false" [sortable]="true" [minWidth]="110" [width]="120">
-                    <ng-template ngx-datatable-header-template>
-                        <span class="datatable-header-cell-wrapper d-inline-block w-100 text-center" (click)="controls.onSort('participation.submissionCount')">
-                            <span class="datatable-header-cell-label bold">{{ 'artemisApp.examScores.submissions' | translate }}</span>
-                            <fa-icon [icon]="controls.iconForSortPropField('participation.submissionCount')"></fa-icon>
-                        </span>
-                    </ng-template>
-                    <ng-template ngx-datatable-cell-template let-value="value">
-                        <div class="w-100 text-center">
-                            <a *ngIf="exam.course.isAtLeastInstructor; else displayTextOnly" routerLink="../participations/{{ value.id }}/submissions">
-                                {{ value.submissionCount }}
-                            </a>
-                            <ng-template #displayTextOnly>
-                                {{ value.submissionCount }}
-                            </ng-template>
-                        </div>
-                    </ng-template>
-                </ngx-datatable-column>
-
-                <ngx-datatable-column prop="durationInMinutes" [resizeable]="false" [sortable]="true" [minWidth]="100" [width]="100">
-                    <ng-template ngx-datatable-header-template>
-                        <span class="datatable-header-cell-wrapper" (click)="controls.onSort('durationInMinutes')">
-                            <span class="datatable-header-cell-label bold">{{ 'artemisApp.examScores.duration' | translate }}</span>
-                            <fa-icon [icon]="controls.iconForSortPropField('durationInMinutes')"></fa-icon>
-                        </span>
-                    </ng-template>
-                    <ng-template ngx-datatable-cell-template let-value="value"> {{ value }} min</ng-template>
-                </ngx-datatable-column>
-
-                <ngx-datatable-column prop="" [resizeable]="false" [minWidth]="180" [width]="180">
-                    <ng-template ngx-datatable-cell-template let-value="value">
-                        <!-- TODO finish link -->
-                        <button [routerLink]="['/course-management', exam.course.id, 'exams', exam.id, 'student-exams']" class="btn btn-primary btn-sm mr-1">
-                            <fa-icon [icon]="'folder-open'" [fixedWidth]="true"></fa-icon>
-                            {{ 'artemisApp.examScores.viewStudentExam' | translate }}
-                        </button>
-                    </ng-template>
-                </ngx-datatable-column>
-            </ngx-datatable>
-        </ng-template>
-    </jhi-data-table>
+<div>
+    <h3>
+        Exam Scores
+    </h3>
+    <ngx-datatable class="material" [rows]="rows" [headerHeight]="50" [footerHeight]="50" [rowHeight]="50" [scrollbarV]="true">
+        <ngx-datatable-column name="Username" prop="username"></ngx-datatable-column>
+        <ngx-datatable-column name="Registration Number" prop="registrationNumber"></ngx-datatable-column>
+        <ngx-datatable-column *ngFor="let exerciseGroup of exerciseGroups" [name]="exerciseGroup.title">
+            <ng-template let-row="row" let-rowIndex="rowIndex" let-value="value" ngx-datatable-cell-template>
+                {{ row.result[exerciseGroup.id] ? row.result[exerciseGroup.id] : '-' }}
+            </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column name="Overall Points" prop="overallPoints"></ngx-datatable-column>
+    </ngx-datatable>
 </div>
