--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -49,6 +49,14 @@
             <div *ngIf="!disconnected" class="exam-footer connected">
                 <div class="container">
                     <div class="exam-footer-content">
+                        <p
+                            *ngIf="isProgrammingExerciseWithOfflineIDE() && !isProgrammingExerciseWithCodeEditor(); else standardConnected"
+                            jhiTranslate="artemisApp.examParticipation.ideConnected"
+                            class="mb-0"
+                        ></p>
+                        <ng-template #standardConnected>
+                            <p jhiTranslate="artemisApp.examParticipation.connected" class="mb-0"></p>
+                        </ng-template>
                         <p jhiTranslate="artemisApp.examParticipation.connected" class="mb-0"></p>
                         <jhi-connection-status class="connection-status-exam-participation"></jhi-connection-status>
                     </div>
