--- a/src/main/webapp/app/exam/participate/summary/exercises/programming-exam-summary/programming-exam-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exercises/programming-exam-summary/programming-exam-summary.component.html
@@ -1,4 +1,6 @@
-<h6>Repository Link</h6>
-<div>
-    <a class="ml-2" href="{{ this.participation?.repositoryUrl }}" target="_blank" rel="noopener noreferrer">{{ this.participation?.repositoryUrl }}</a>
-</div>
+<h6>
+    <span>Repository Link:</span>
+    <span>
+        <a href="{{ this.participation?.repositoryUrl }}" target="_blank" rel="noopener noreferrer">{{ this.participation?.repositoryUrl }}</a>
+    </span>
+</h6>
