--- a/src/main/webapp/app/exercises/quiz/manage/quiz-exercise-detail.component.html
+++ b/src/main/webapp/app/exercises/quiz/manage/quiz-exercise-detail.component.html
@@ -76,7 +76,7 @@
                             <jhi-date-time-picker
                                 labelName="{{ 'artemisApp.exercise.releaseDate' | translate }}"
                                 [(ngModel)]="quizExercise.releaseDate"
-                                (ngModelChange)="cacheValidation()"
+                                (ngModelChange)="onDurationChange()"
                                 [error]="false"
                                 name="releaseDate"
                             ></jhi-date-time-picker>
@@ -86,7 +86,7 @@
                                 name="dueDate"
                                 [error]="quizExercise.dueDateError"
                                 labelName="{{ 'artemisApp.exercise.dueDate' | translate }}"
-                                (ngModelChange)="cacheValidation()"
+                                (ngModelChange)="onDurationChange()"
                                 [(ngModel)]="quizExercise.dueDate"
                             ></jhi-date-time-picker>
                             <span *ngIf="quizExercise.dueDateError" class="invalid-feedback">{{ 'artemisApp.exercise.dueDateError' | translate }}</span>
