fix exam visible to students and improve exam header styling

--- a/src/main/webapp/app/exam/participate/exercises/quiz/quiz-exam-submission.component.html
+++ b/src/main/webapp/app/exam/participate/exercises/quiz/quiz-exam-submission.component.html
@@ -1,4 +1,7 @@
 <div class="quiz-content container" *ngIf="exercise">
+    <h2>
+        {{ exercise.title }}
+    </h2>
     <div *ngFor="let question of exercise.quizQuestions; let i = index">
         <jhi-multiple-choice-question
             id="question{{ i }}"
