--- a/src/main/webapp/app/exam/manage/student-exams/student-exams.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exams.component.html
@@ -14,6 +14,10 @@
                 <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                 <span jhiTranslate="artemisApp.studentExams.startExercises">Start Exercises</span>
             </button>
+            <button class="btn btn-primary ml-1" style="height: 40px;" (click)="evaluateExercises()" *ngIf="course?.isAtLeastInstructor" [disabled]="isLoading">
+                <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                <span jhiTranslate="artemisApp.studentExams.evaluateExercises">Evaluate Exercises</span>
+            </button>
         </div>
     </div>
     <jhi-alert></jhi-alert>
