--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -736,3 +736,10 @@ ngb-tooltip-window {
         margin-right: 2px;
     }
 }
+
+@media print {
+    body,
+    div {
+        display: block !important;
+    }
+}
