added css file and refactored html

--- a/src/main/webapp/app/overview/courses.component.html
+++ b/src/main/webapp/app/overview/courses.component.html
@@ -1,15 +1,15 @@
-<div *ngIf="nextRelevantExam">
-    <h3>
-        <span> Current Exam of "{{ nextRelevantCourseForExam.title }}" </span>
-    </h3>
-    <div class="row mb-4 pr-4 pl-4 bg-light align-items-center" (click)="openExam()">
-        <div class="col-10">
-            <fa-icon [icon]="'pen-alt'" size="2x"></fa-icon>
-            <h4 class="ml-1 d-inline">{{ nextRelevantExam.title }}</h4>
-        </div>
-        <div class="col-2 align-text-end">
-            <div *ngIf="nextRelevantExam.startDate">{{ 'artemisApp.exam.overview.start' | translate: { start: nextRelevantExam.startDate | artemisDate } }}</div>
-            <div *ngIf="nextRelevantExam.maxPoints">{{ 'artemisApp.exam.overview.maxPoints' | translate: { points: nextRelevantExam.maxPoints } }}</div>
+<div *ngIf="nextRelevantExam" class="row">
+    <h3 class="col mb-3">Current Exam of "{{ nextRelevantCourseForExam.title }}"</h3>
+    <div class="col-12 pl-4 pr-4 mb-5">
+        <div class="row justify-content-between align-items-center exam-container pl-3 pr-3" (click)="openExam()">
+            <div class="mb-4 mt-4 d-flex">
+                <fa-icon [icon]="'pen-alt'" size="2x"></fa-icon>
+                <h4 class="ml-2">{{ nextRelevantExam.title }}</h4>
+            </div>
+            <div class="text-right mb-4 mt-4">
+                <div *ngIf="nextRelevantExam.startDate">{{ 'artemisApp.exam.overview.start' | translate: { start: nextRelevantExam.startDate | artemisDate } }}</div>
+                <div *ngIf="nextRelevantExam.maxPoints">{{ 'artemisApp.exam.overview.maxPoints' | translate: { points: nextRelevantExam.maxPoints } }}</div>
+            </div>
         </div>
     </div>
 </div>
