fix whitespace code editor title

--- a/src/main/webapp/app/exam/participate/exercises/programming/programming-exam-submission.component.html
+++ b/src/main/webapp/app/exam/participate/exercises/programming/programming-exam-submission.component.html
@@ -1,11 +1,24 @@
 <!-- ngIf code-editor -->
 <div *ngIf="exercise.allowOnlineEditor && !exercise.allowOfflineIde">
+    <h4 class="mb-1 mr-1">Online Code Editor</h4>
     <jhi-exam-code-editor-student [exercise]="exercise" [participation]="studentParticipation"></jhi-exam-code-editor-student>
 </div>
 <!-- ngIf code-editor with clone button start -->
 <div *ngIf="exercise.allowOnlineEditor && exercise.allowOfflineIde">
-    <jhi-exercise-details-student-actions jhiOrionFilter [examMode]="true" [showInOrionWindow]="false" [exercise]="exercise" [courseId]="courseId" [showResult]="true">
-    </jhi-exercise-details-student-actions>
+    <div class="d-flex mb-3">
+        <div class="d-flex flex-wrap flex-column justify-content-center">
+            <h4 class="mb-0 mr-1">Online Code Editor</h4>
+        </div>
+        <jhi-exercise-details-student-actions
+            jhiOrionFilter
+            [examMode]="true"
+            [showInOrionWindow]="false"
+            [exercise]="exercise"
+            [courseId]="courseId"
+            [showResult]="true"
+        ></jhi-exercise-details-student-actions>
+    </div>
+
     <jhi-exam-code-editor-student [exercise]="exercise" [participation]="studentParticipation"></jhi-exam-code-editor-student>
 </div>
 <!-- ngIf Offline IDE clone button start -->
